	  leading or trailing whitespace (2015-11-23).
	* apps/nshlib: The mount commands now accepts mount options (currently
	  needed only for the hostfs file system).  From Ken Pettit (2015-11-25).
	* apps/nshlib:  NSH no longer calls losetup() and loteardown directly.
	  Now it opens /dev/loop and accomplishes these things using ioctl()
	  calls (2015-11-25).
	* apps/nshlib:  If CONFIG_NETDEV_STATISTICS=y, then print the network
	  driver statistics in the ifconfig (15-11-26).
	* apps/nshlib:  The 'ifconfig' command now uses /proc/net/<dev> to view
	  network device configuration and status and /proc/net/stat to show
	  network statistics.  A consequence of this is that you cannot view
	  this network information if the procfs is not enabled and mounted at
	  /proc (2015-11-27).
	* apps/nshlib:  Remove all references to internal OS interface
	  netdev_foreach().  Logic in ifconfig, ifup, and ifown now use the
	  procfs file system to examine networking status.  (2015-11-27).
	* apps/nshlib:  Add a new NSH losmart command.  losmart setups up
	  a loop device for the smart MTD driver similar to losetup but
	  with different syntax.  From Ken Pettit (2015-11-28).
	* apps/nshlib:  The I/O buffer, g_iobuffer, should not be a global
	  buffer.  That will not work in an environment where there are multiple
	  NSH sessions.  The I/O buffer must, instead, be a part part of the
	  session-specific data defined in nsh_console.h (2015-11-28).
	* apps/nshlib:  The 'ps' command now uses /proc/<pid>/ to obtain
	  task status information.  A consequence of this is that you cannot use
	  the 'ps' command if the procfs is not enabled and mounted at
	  /proc (2015-11-28).

7.14 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* netutils/telnetd:  Move the Telnet driver from netutils/telnetd to
	  nuttx/drivers/net.  It is a driver an belongs in the OS.  There are
	  still some partitioning issues with the interface to the Telnet
	  driver (2015-12-07).
